Exc5/deployment-admin-back-end-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-back-end-api-app
  labels:
    app: admin-back-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-back-end-api
  template:
    metadata:
      labels:
        app: admin-back-end-api
        role: admin-back-end-api
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 83
