Exc5/deployment-admin-front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front-end-app
  labels:
    app: admin-front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-front-end
  template:
    metadata:
      labels:
        app: admin-front-end
        role: admin-front-end
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 82
