Exc5/deployment-front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-app
  labels:
    app: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
        role: front-end
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
