Exc5/service-admin-back-end-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-app
  labels:
    app: admin-back-end-api
spec:
  type: ClusterIP
  selector:
    app: admin-back-end-api
  ports:
    - protocol: TCP
      port: 83
      targetPort: 83
