Exc5/service-back-end-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end-api-app
  labels:
    app: back-end-api
spec:
  type: ClusterIP
  selector:
    app: back-end-api
  ports:
    - protocol: TCP
      port: 81
      targetPort: 81
