Exc5/service-front-end.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-app
  labels:
    app: front-end
spec:
  type: ClusterIP
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
